# src/routes/pessoafisica.route.js
@@ -4,7 +4,7 @@ import { validId, validPessoaFisica } from "../middlewares/global.middlewares.js
 
 const PessoaFisicaRoute = Router();
 
-PessoaFisicaRoute.post("/", pessoafisicaController.create); // cria users
+PessoaFisicaRoute.post("/create", pessoafisicaController.create); // cria users
 PessoaFisicaRoute.get("/", pessoafisicaController.findAll); // busca todo users
 PessoaFisicaRoute.get("/:id", validId, validPessoaFisica, pessoafisicaController.findById); // busca users id
 PessoaFisicaRoute.patch("/:id", validId, validPessoaFisica, pessoafisicaController.update);
