# src/swagger.json
@@ -19,7 +19,7 @@
         }
     ],
     "paths": {
-        "/pessoafisica/": {
+        "/pessoafisica/create": {
             "post": {
                 "summary": "Create a new legal physical user",
                 "description": "Route responsible for creating a new physical user",
@@ -201,9 +201,9 @@
         },
 
 
-        "/pessoajuridica/": {
+        "/pessoajuridica/create": {
             "post": {
-                "summary": "Create a new legal legal user",
+                "summary": "Create a new legal user",
                 "description": "Route responsible for creating a new legal user",
                 "tags": [
                     "PessoaJuridica"
@@ -467,7 +467,7 @@
         },
 
 
-        "/planofree/": {
+        "/planofree/create": {
             "post": {
                 "summary": "Create a new free plan",
                 "description": "Route responsible for creating a new free plan",
